--- a/style.css
+++ b/style.css
@@ -166,23 +166,28 @@ ul {
 
 a {
 
-    color: white;
+    color: black;
     text-decoration: none;
 }
 
 a:hover {
 
-    color: black;
+    color: white;
+    transition: 0.5s;
     text-decoration: none;
 }
 
 header {
 
-    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 100px;
+    margin-top: 30px;
+    flex-direction: column;
+}
+
+h1, h3 {
+    margin-bottom: 15px;
 }
 
 footer {
@@ -190,6 +195,5 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: blue;
     height: 90vh;
 }
